style: add select option broken style fix

--- a/client/app/styles/core/_input.scss
+++ b/client/app/styles/core/_input.scss
@@ -116,10 +116,6 @@ body.user-is-tabbing textarea {
   }
 
   .select-container {
-    .select-option__control {
-      height: 42px;
-    }
-
     .select-option__multi-value__label {
       font-weight: $font-weight-bold-one;
       font-size: $font-size-small;
